# Templeton

./: .gitignore  README.md  multi_agent_stock_system.md  pyproject.toml  templeton
benchmarks/: templeton_cases.json
data/: demo_signal_history.csv
docs/: dexter_parity_roadmap.md
plans/: investor_workspace.json  permanent_solution.json  terminal_experience.json  terminal_state_machine.mmd
prompts/: README.md  manifest.json
schemas/: agent_envelope.schema.json  business_quality.schema.json  conversational_interface.schema.json  decision_payload.schema.json  decision_portfolio_fit.schema.json  evidence.schema.json  financial_quality.schema.json  news_catalyst.schema.json  research_request.schema.json  risk.schema.json  router_planner.schema.json  screener_universe.schema.json  source_verification.schema.json  synthesizer.schema.json  technical_analysis.schema.json  valuation.schema.json  verifier.schema.json
stock_researcher/: __init__.py  __main__.py  benchmarks.py  cli.py  connectors.py  conversation.py  demo_data.py  llm.py  models.py  orchestrator.py  prompts.py  quant.py  research_manager.py  run_store.py  schemas.py  validation.py  workspace.py
stock_researcher/agents/: __init__.py  business_quality.py  decision_portfolio_fit.py  financial_quality.py  news_catalyst.py  risk.py  router_planner.py  runtime.py  source_verification.py  synthesizer.py  technical_analysis.py  valuation.py  (+1 more)
tests/: test_benchmarks.py  test_cli.py  test_connectors.py  test_conversation.py  test_orchestrator.py  test_quant.py  test_research_manager.py  test_workspace.py
