[project]
name = "stock-researcher"
version = "0.1.0"
description = "Scaffold for a multi-agent stock research system"
requires-python = ">=3.11"

[project.scripts]
templeton = "stock_researcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stock_researcher*"]
