[project]
name = "stock-researcher"
version = "0.1.0"
description = "A local, evidence-tracked stock research terminal"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["investing", "research", "stocks", "cli"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
templeton = "stock_researcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stock_researcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
